tests/vm/boolOpsLeftErr.test.out
-------------------------------------------------------------------------------
Type Error:

Operator (and) expected type 'PtlsBool', got type 'PtlsNumber'
-------------------------------------------------------------------------------

At (line 4) (column 7) in 'tests/vm/boolOpsLeftErr.test'
a = 0 and true
      ^
At (line 2) (column 1) in 'tests/vm/boolOpsLeftErr.test'
output = [a] |> println
^
At (line 10) (column 38) in 'lib/prelude/io.ptls'
println(value) = print(show(value) + "\n")
                                     ^
At (line 42) (column 11) in 'lib/prelude/show.ptls'
  start + elemStr + end
          ^
At (line 43) (column 9) in 'lib/prelude/show.ptls'
  where elemStr = container |> map(repr) |> join(sep)
        ^
At (line 14) (column 29) in 'lib/prelude/string.ptls'
  else concatStrings(result + head(strings), tail(strings))
                            ^
At (line 5) (column 18) in 'lib/prelude/list.ptls'
head(list) = list.!getHead requires list is PtlsList
                 ^
At (line 51) (column 8) in 'lib/prelude/list.ptls'
  else [head(list)] ++ prependToAll(sep, tail(list))
       ^
At (line 5) (column 18) in 'lib/prelude/list.ptls'
head(list) = list.!getHead requires list is PtlsList
                 ^
At (line 157) (column 9) in 'lib/prelude/list.ptls'
  else [func(head(list))] ++ mapList(func, tail(list))
        ^
At (line 5) (column 18) in 'lib/prelude/list.ptls'
head(list) = list.!getHead requires list is PtlsList
                 ^
At (line 157) (column 9) in 'lib/prelude/list.ptls'
  else [func(head(list))] ++ mapList(func, tail(list))
        ^
At (line 5) (column 18) in 'lib/prelude/list.ptls'
head(list) = list.!getHead requires list is PtlsList
                 ^
At (line 2) (column 11) in 'tests/vm/boolOpsLeftErr.test'
output = [a] |> println
          ^
